# iam57-onanibot

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  jm_config.yml  pyproject.toml
config/: jm_config.yml  jm_option.yml
iam57_onanibot/configs/: jm_config.py
iam57_onanibot/plugins/: english_kana_plugin.py  jm.py  jm_plugin.py
iam57_onanibot/services/: jm_service.py
iam57_onanibot/utils/: jm.py
