[project]
name = "iam57-onanibot"
version = "0.1.0"
description = "iam57-onanibot"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = ["nonebot-adapter-onebot>=2.4.6", "nonebot2[fastapi]>=2.4.2", "jmcomic>=2.5.32", "pillow>=11.1.0", "pyyaml>=6.0.2", "requests>=2.32.3", "ruff>=0.11.2"]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["iam57_onanibot/plugins"]
builtin_plugins = []

[tool.setuptools]
py-modules = ["iam57_onanibot"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["docker"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "W", # pycodestyle warnings
    "E", # pycodestyle errors
    "I", # isort
    "UP", # pyupgrade
    "ASYNC", # flake8-async
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "TID", # flake8-tidy-imports
]
ignore = [
    "E402", # module-import-not-at-top-of-file
    "UP037", # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["iam57_onanibot"]